Release ...
* make: Comments following "ifeq" and other conditionals are now handled
  correctly.

Release 070218
* sccs: A "-R" option has been added to enable recursive operation on
  subdirectories.
* sccs: A manual page has been added (based on the 4.3BSD-Tahoe page).
* make: The default variant now has the ".GET:" special target enabled
  to retrieve data from an s.file in the current directory, similar to
  the ".GET_POSIX:" target in the POSIX variant and the behavior of the
  SVR4 variant.
* make: The GNU syntax for conditional macros, "target: variable=value",
  is now accepted.
* make: The GNU syntax for parse-time conditionals, "ifeq (arg1, arg2)",
  "ifdef name", etc., is now supported.
* make: Partial support for GNU style functions, "$(function arguments)",
  has been added. Currently, the supported functions are "dir", "notdir",
  "suffix", "basename", "addsuffix", "addprefix", "join", "wildcard",
  "subst", "patsubst", "strip", "findstring", "filter", "filter-out",
  "sort", "word", "wordlist", "words", "firstword", "shell", "error", and
  "warning".
* make: Fixed the "-jn" option for recursive operation if given without
  space between option and option argument; it was previously ignored.

Release 070211
* SCCS: Most of the manual pages are now available, based on source code
  released by Sun.
* make: Use a POSIX shell or a Bourne shell as default value for $(SHELL)
  depending on whether POSIX mode is enabled or not. The path names of
  these shells are set in "mk.config". Both default to "/bin/sh" to ensure
  that the package can be built portably, thus to actually use this feature,
  install the Heirloom Bourne shell in advance and then edit "mk.config".
* make: A new manual page is available, based on source code released by
  Sun.
* get: The %G% and %H% keywords omit leading zero digits in month or day
  numbers now, as previous (non-Solaris) versions of SCCS did.
* The tools have been ported to HP-UX.
* The tools have been ported to AIX.
